# DIETPLANR

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
dietplanr/: db.sqlite3  manage.py
dietplanr/account/: urls.py  views.py
dietplanr/account/static/css/: base.css  dietitian_panel_clients.css  dietitian_profile.css  landing_page.css
dietplanr/account/static/js/: chat.js
dietplanr/account/templates/: base.html
dietplanr/account/templates/account/: dietitian_panel.html  landing_page.html  profile.html
dietplanr/api/: serializers.py  urls.py  views.py
dietplanr/chat/: admin.py  consumers.py  models.py  routing.py  urls.py
dietplanr/chat/chat_api/: serializers.py  urls.py  views.py
dietplanr/chat/migrations/: 0001_initial.py  0002_conversation_rename_user_message_sender_and_more.py
dietplanr/dietplanr/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
dietplanr/meal_plan/: apps.py
dietplanr/panel/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
dietplanr/panel/migrations/: 0001_initial.py  0002_alter_userprofile_gender.py  0003_rename_name_userprofile_full_name.py  0004_alter_dietitianprofile_experience_and_more.py  0005_userprofile_dietitian_and_more.py  0006_alter_appointment_title_and_more.py
dietplanr/panel/templates/: base.html  dietitian_panel_base.html
dietplanr/recipes/: admin.py  models.py
dietplanr/recipes/migrations/: 0001_initial.py
dietplanr/tracker/: forms.py  models.py  urls.py  views.py
dietplanr/tracker/migrations/: 0001_initial.py
panel/: urls.py
(+42 files in other folders)
