[tool.poetry]
name = "dietplanr"
version = "0.1.0"
description = "platform for dietitians"
authors = ["Wiktor Fratczak <wiktorft19@gmail.com>"]
license = "MIT"
#readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.3"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
