[tool.poetry]
name = "dietplanr"
version = "0.1.0"
description = "platform for dietitians"
authors = ["Wiktor Fratczak <wiktorft19@gmail.com>"]
license = "MIT"
#readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2.5"
django-rest-framework = "^0.1.0"
djangorestframework = "^3.14.0"
channels = "^4.0.0"
pillow = "^10.0.0"
channels-redis = "^4.1.0"
requests = "^2.31.0"
daphne = "^4.0.0"
asgiref = "^3.7.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
